--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 pytz~=2022.1
-requests #~=2.27.1
+requests==2.28.1
 python-dotenv~=0.20.0
 ipython
 pandas~=1.4.2
-numpy~=1.22.3
+numpy==1.23.1
 tqdm~=4.64.0
 tinkoff-investments
 tinkoff~=0.1.1
 
 # Django
-django~=3.2.13
+django~=4.1
 django-timezone-field 
 django-cors-headers
-django-debug-toolbar~=3.4.0
+django-debug-toolbar==3.5.0
 whitenoise
 
 # Django 3.0 async requirements
@@ -37,3 +37,6 @@ python-telegram-bot
 
 # Django 3.0 async requirements
 uvloop
+
+asgiref~=3.5.2
+python-dateutil~=2.8.2
