fix share creating

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ pytz~=2022.1
 requests==2.28.1
 python-dotenv~=0.20.0
 ipython
-pandas~=1.4.2
-numpy==1.23.1
+pandas~=1.4.3
+numpy~=1.23.1
 tqdm~=4.64.0
 tinkoff-investments
 tinkoff~=0.1.1
@@ -12,7 +12,7 @@ tinkoff~=0.1.1
 django~=4.1
 django-timezone-field 
 django-cors-headers
-django-debug-toolbar==3.5.0
+django-debug-toolbar~=3.5.0
 whitenoise
 
 # Django 3.0 async requirements
@@ -25,7 +25,7 @@ psycopg2-binary
 dj-database-url
 
 # Distributed tasks
-celery~=5.2.6
+celery~=5.2.7
 redis
 django-celery-beat
 
@@ -40,3 +40,4 @@ uvloop
 
 asgiref~=3.5.2
 python-dateutil~=2.8.2
+toolz
